[project]
name = "mads-ml-marn-x"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mads-datasets>=0.3.14",
    "mltrainer>=0.2.2",
    "tensorboard>=2.19.0",
    "tomlserializer>=0.2.0",
    "torch-tb-profiler>=0.4.3",
]
