[project]
name = "mads-ml-marn-x"
version = "0.1.0"
description = "Marnix' version of the MADS_ML module of ADS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cuda-python>=12.8.0",
    "jupyter>=1.1.1",
    "mads-datasets>=0.3.14",
    "mltrainer>=0.2.2",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "tensorboard>=2.19.0",
    "toml>=0.10.2",
    "tomlserializer>=0.2.0",
    "torch>=2.7.0",
    "torch-tb-profiler>=0.4.3",
]
